# neuro-parser

./:  DEVELOPERS.md   .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  celery-start.sh  docker-compose.prod.yaml  docker-compose.yaml  entrypoint-dev.sh  entrypoint-prod.sh  entrypoint.sh  makefile  manage.py  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements.txt  requirements.txt.bak  reset_db.py  reset_db.sh  setup.cfg  traefik.prod.toml  traefik.toml
.github/: copilot-instructions.md
.github/agents/: do-verify.agent.md
.github/workflows/: build.yml  check-docs.yml  ci.yml  deploy.yml  test.yml  tests.web.yml  verify.yml
config/: .env.template
config/nginx/: dev.conf
docker/bot/: entrypoint.sh
docker/celery/: Dockerfile  entrypoint.sh
docker/web/: Dockerfile  Dockerfile.prod  entrypoint-dev.sh  entrypoint-prod.sh
docs/: API.md  ARCHITECTURE.md  BOT.md  CONVENTIONS.md  DOMAIN.md  ML.md  SECURITY.md  administration.md  conf.py  index.md  requirements.txt
docs/agents/: development-workflow.md  documentation-maintenance.md  repository-map.md
docs/design-docs/: architecture-principles.md  core-beliefs.md  doc-gardening.md  index.md
docs/en/: administration.md  developers.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: _template.md
docs/product-specs/: index.md  user-flows.md
docs/references/: llm-references.md
docs/ru/: administration.md  developers.md  index.md
meta/configs/: unit.conf.json
meta/docker/: Dockerfile.app  docker-compose.yml
meta/local-dev/: deploy.bash  docker-compose.yml  nginx.conf
meta/sh/: slack  start.app  start.celery.beat  start.celery.workers
scripts/: check-docs.sh  ci-failed-log.sh  create-pr.sh  get-pr-review-comments.sh  test_telethon.py  verify.sh
server/: __init__.py  celery.py  urls.py
server/apps/analytics/: apps.py  forms.py  tasks.py  urls.py  views.py
server/apps/analytics/logic/: statistics.py
server/apps/api/: apps.py  authentication.py  exception_handler.py  permissions.py  serializers.py  swagger.py  throttling.py  urls.py  views.py
server/apps/api/tests/: conftest.py  test_article_view.py  test_fail.py  test_incident_type_view.py  test_media_incident_view.py  test_source_view.py  test_views.py
server/apps/bot/: admin.py  apps.py  bot.py  bot_instance.py  forms.py  models.py  services.py  urls.py  views.py
server/apps/core/: __init__.py  admin.py  apps.py  common.py  forms.py  incident_types.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
server/apps/users/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py
server/celery/: __init__.py  bot.py  celery_app.py  crawler.py  parser.py
server/core/: fetcher.py  incident_predictor.py
server/core/article_index/: article_index.py  query_checker.py  test_index_parameters.py
server/core/article_parser/: __init__.py  article_parser.py  utils.py
server/core/fetcher/: __init__.py  client.py  exceptions.py  fetcher.py  http_client.py  statistics.py  tasks.py  telethon_client.py  url_preparer.py  utils.py
server/core/incident_predictor/: __init__.py  incident_predictor.py
server/core/parser/: article_parser.py  source_parser.py  utils.py
server/core/source_parser/: __init__.py  source_parser.py  utils.py
server/libs/: bert.py  chat_gpt.py  handler.py  helpers.py  llama.py  morphy.py  user_agent.py
server/libs/tests/: handler_test.py
server/settings/: __init__.py
server/settings/components/: __init__.py  analytics.py  api.py  caches.py  celery.py  ckeditor.py  common.py  grabber.py  logging.py  parse.py  predict.py  sentry.py  telegram.py  telethon.py
server/settings/environments/: development.py  production.py
server/templates/account/: base.html  email.html  email_confirm.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_set.html  signup.html  verification_sent.html
server/templates/admin/: change_form.html
server/templates/swaggerui/: swaggerui.html
server/templates/txt/: humans.txt  robots.txt
traefik/dynamic/: tls.yml
(+386 files in other folders)
