[tool.poetry]
name = "neuro-parser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "neuro_parser"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "==4.10.0"
celery = "==5.2.3"
django = "==3.2.12"
django-allauth = "==0.47.0"
django-ckeditor = "==6.0.0"
django-split-settings = "==1.1.0"
django-tracking2 = "==0.5.0"
django-redis-cache = "==3.0.0"
djangorestframework = "==3.13.1"
hiredis = "==1.1.0"
pandas = "==1.5.2"
psycopg2-binary = "^2.9.6"
redis = "==3.5.3"
python-decouple = "==3.6"
sentry-sdk = "==1.5.4"
htmldocx = "==0.0.5"
pdfkit = "==0.6.1"
# pymorphy2-dicts-ru = "==2.4.417127.4579844"
# pymorphy2 = "==0.9.1"
pymorphy3 = "==1.2.0"
nltk = "==3.8.1"
dateparser = "^1.1"
cssselect = "==1.1.0"
# torch = "==1.13.0"
transformers = "==4.25.1"
xlsxwriter = "^1"
navec = "==0.9.0"
slovnet = "==0.4.0"
python-telegram-bot = "==13.10"
pillow = "==9.0.0"
whitenoise = "==6.3.0"
bcrypt = "==3.2.0"
goose3 = "^3.1"
feedparser = "^6"
scikit-learn = { version = "==1.2.0", optional = false }

[tool.poetry.extras]
transformers = ["scikit-learn"]

[tool.poetry.group.dev.dependencies]
icecream = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
