[tool.poetry]
name = "neuro-parser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "neuro_parser"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "==4.10.0"
celery = {extras = ["redis"], version = "^5.3.4"}
django = "==3.2.21"
django-allauth = "==0.47.0"
django-split-settings = "==1.1.0"
django-tracking2 = "==0.5.0"
djangorestframework = "==3.13.1"
hiredis = "==1.1.0"
pandas = "==1.5.2"
psycopg2-binary = "^2.9.6"
redis = "4.6.0"
python-decouple = "==3.6"
sentry-sdk = "==1.5.4"
htmldocx = "==0.0.5"
pdfkit = "==0.6.1"
pymorphy2-dicts-ru = "==2.4.417127.4579844"
pymorphy2 = "==0.9.1"
pymorphy3 = "==1.2.0"
nltk = "==3.8.1"
dateparser = "^1.1"
cssselect = "==1.1.0"
torch = "==1.13.0"
transformers = "==4.25.1"
xlsxwriter = "^1"
navec = "==0.9.0"
slovnet = "==0.4.0"
python-telegram-bot = "==13.15"
pillow = "==9.0.0"
bcrypt = "==3.2.0"
goose3 = "^3.1"
feedparser = "^6"
selectolax = "*"
scikit-learn = { version = "==1.2.0", optional = false }
gunicorn = "^21.2.0"
icecream = "*"
django-redis = "^5.3.0"
watchdog = "^3.0.0"
openai = "1.3.0"
simhash = "^2.1.2"
aiohttp = "^3.8.6"
[tool.poetry.extras]
transformers = ["scikit-learn"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
