[tool.pdm.build]
includes = ["neuro_parser"]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Antijob", email = "info@antijob.net"},
]
requires-python = "<4.0,>=3.8"
dependencies = [
    "beautifulsoup4==4.10.0",
    "celery[redis]<6.0.0,>=5.3.4",
    "django==3.2.21",
    "django-allauth==0.58.2",
    "django-split-settings==1.1.0",
    "django-tracking2==0.5.0",
    "djangorestframework==3.13.1",
    "hiredis==1.1.0",
    "psycopg2-binary<3.0.0,>=2.9.6",
    "redis==4.6.0",
    "python-decouple==3.6",
    "sentry-sdk==1.5.4",
    "htmldocx==0.0.5",
    "pdfkit==0.6.1",
    "pymorphy2-dicts-ru==2.4.417127.4579844",
    "pymorphy2==0.9.1",
    "pymorphy3==1.2.0",
    "nltk==3.8.1",
    "dateparser<2.0,>=1.1",
    "cssselect==1.1.0",
    "torch==1.13.0",
    "transformers==4.25.1",
    "xlsxwriter<2,>=1",
    "navec==0.9.0",
    "slovnet==0.4.0",
    "python-telegram-bot==13.15",
    "pillow==9.0.0",
    "bcrypt==3.2.0",
    "goose3<4.0,>=3.1",
    "feedparser<7,>=6",
    "selectolax",
    "scikit-learn==1.2.0",
    "gunicorn<22.0.0,>=21.2.0",
    "icecream",
    "django-redis<6.0.0,>=5.3.0",
    "watchdog<4.0.0,>=3.0.0",
    "openai==1.3.0",
    "simhash<3.0.0,>=2.1.2",
    "aiohttp<4.0.0,>=3.8.6",
    "lxml[html_clean]<6,>=5",
    "aiogram>=3.7.0",
]
name = "neuro-parser"
version = "0.1.0"
description = ""
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
